--- a/ToDo.text
+++ b/ToDo.text
@@ -1,2 +1,3 @@
 * make some routes (such as updating an user) require authentication
 * add data validation to User model
+* remove redundant Bcrypt in user auth
